technitium/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: technitium
  template:
    metadata:
      labels:
        app: technitium
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: server
          image: technitium/dns-server:latest
          ports:
            - containerPort: 5380
            - containerPort: 53
          volumeMounts:
            - name: technitium-data
              mountPath: /etc/dns
      volumes:
        - name: technitium-data
          persistentVolumeClaim:
            claimName: technitium-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium-prometheus-exporter
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: technitium-prometheus-exporter
  template:
    metadata:
      labels:
        app: technitium-prometheus-exporter
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: server
          image: ghcr.io/noeulnight/technitium-exporter:master
          ports:
            - containerPort: 8080
